Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

  [Enhancements]
  - Change backend from Pod::Parser to Pod::Simple.
    Previous documented API has been ported
    however the Pod::Simple API should be preferred for new code.
  - Improve escaping of markdown characters.
  - Represent over/back regions without items as blockquotes.

  [Backward Incompatible Changes]
  - E<> codes used to produce equivalent html entities (&foo;).
    These now simply print the corresponding unicode character as utf-8.
    If you desire alternate behavior please report a bug.
  - Tabs are now expanded.

1.500     2013-11-22T15:05:31Z

    - Format url fragments (in links to perldoc sections)
      according to the destination site (perldoc_url_prefix).
      This makes links to sections work where they probably never did before.
      They are also customizable.

    - Use multiple backticks to delimit code spans
      that contain literal backticks.

1.401     2013-11-06T05:30:55Z

    - Require Pod::Parser 1.51 for bug fixes.

1.400     2013-11-05T14:18:19Z

    [Output Changes]
    - Change perldoc urls to point to metacpan.

    [Bug Fixes]
    - Recognize numbered pod items that do not have a period.
      Thanks to Yasutaka ATARASHI for the pull request (gh-4).
    - Remove extraneous blank line between verbatim paragraphs.
      Thanks to Graham Ollis for the pull request (gh-5).
    - Do not escape markdown characters inside links (or file paths).
      Thanks to Taiki Kawakami for the pull request (gh-6).

1.322     2012-11-17T15:51:36Z

    - Fix incorrect escaping of characters
      that are inside inline code blocks in headers.
      Thanks to Peter Vereshagin for the pull req (gh-3).

1.321     2012-10-27T01:23:56Z

    - Improved list handling including support for ordered (numbered)
      and nested lists.
      Thanks to Yasutaka ATARASHI for the pull req (gh-2).

1.320     2012-04-30T23:30:11Z
